@@ -12,5 +12,9 @@ python3 -c "import sys; orthographyName = open('german/name.txt').read(); titled
 python3 -c "import sys; orthographyName = open('pinyin/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('pinyin/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./pinyinQuickTypist.html
 python3 -c "import sys; orthographyName = open('polish/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('polish/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./polishQuickTypist.html
 python3 -c "import sys; orthographyName = open('icelandic/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('icelandic/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./icelandicQuickTypist.html
+python3 -c "import sys; orthographyName = open('irish/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('irish/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./irishQuickTypist.html
+python3 -c "import sys; orthographyName = open('scottish-gaelic/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('scottish-gaelic/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./scottish-gaelicQuickTypist.html
+python3 -c "import sys; orthographyName = open('latin/name.txt').read(); titled = sys.stdin.read().replace('ISO-233 Arabic Romanization Template', orthographyName); replacements = open('latin/replacements.txt').read(); print(titled.replace('[[\'11\', \'2\']]', replacements));" < ./template.html > ./latinQuickTypist.html
+
 
 
