@@ -1,0 +1,13 @@
+[
+            // See: https://en.wikipedia.org/wiki/Irish_orthography
+			["A&'", "Á"],
+			["a&'", "á"],
+			["E&'", "É"],
+			["e&'", "é"],
+			["I&'", "Í"],
+			["i&'", "í"],
+			["O&'", "Ó"],
+			["o&'", "ó"],
+			["U&'", "Ú"],
+			["u&'", "ú"],
+			];
