@@ -1,0 +1,23 @@
+[
+			["A&'", "Ā"],
+			["a&'", "ā"],
+			["E&'", "Ē"],
+			["e&'", "ē"],
+			["I&'", "Ī"],
+			["i&'", "ī"],
+			["O&'", "Ō"],
+			["o&'", "ō"],
+			["U&'", "Ū"],
+			["u&'", "ū"],
+
+			["a&2'", "Á"],
+			["a&2'", "á"],
+			["E&2'", "É"],
+			["e&2'", "é"],
+			["I&2'", "Í"],
+			["i&2'", "í"],
+			["O&2'", "Ó"],
+			["o&2'", "ó"],
+			["U&2'", "Ú"],
+			["u&2'", "ú"],
+			];
