@@ -1,0 +1,24 @@
+[
+            // See: https://en.wikipedia.org/wiki/Scottish_Gaelic_orthography
+			["A&'", "À"],
+			["a&'", "à"],
+			["E&'", "È"],
+			["e&'", "è"],
+			["I&'", "Ì"],
+			["i&'", "ì"],
+			["O&'", "Ò"],
+			["o&'", "ò"],
+			["U&'", "Ù"],
+			["u&'", "ù"],
+
+			["A&2'", "Á"],
+			["a&2'", "á"],
+			["E&2'", "É"],
+			["e&2'", "é"],
+			["I&2'", "Í"],
+			["i&2'", "í"],
+			["O&2'", "Ó"],
+			["o&2'", "ó"],
+			["U&2'", "Ú"],
+			["u&2'", "ú"]
+			];
