@@ -31,3 +31,6 @@ At the same time the following orthographies have been added: French, Spanish or
 - Add support for Pinyin
 - Add support for Polish
 - Add support for Icelandic
+- Add support for Irish
+- Add support for Scottish Gaelic
+- Add support for Latin
